[package]
name = "book_io_downloader"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
repository = "https://github.com/sam0x17/book_io_downloader"
description = "A CLI utility and client library for bulk-downloading book covers from book.io"
license = "MIT"

[dependencies]
blockfrost = "0.2.1"
clap = "4.4.7"
futures = "0.3.29"
indicatif = "0.17.7"
ipfs-api = "0.17.0"
ipfs-api-backend-hyper = "0.6"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempdir = "0.3.7"
